--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,18 @@ authors = ["Boyu Yang <yangby@cryptape.com>"]
 edition = "2018"
 
 [dependencies]
+ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.25.0" }
+tentacle = { version = "~0.2", features = ["molc"] }
+property = "~0.2"
+failure = "~0.1"
+lazy_static = "~1.4"
+serde = "~1.0"
+serde_derive = "~1.0"
+toml = "~0.5"
+
+[build-dependencies]
+slices = "~0.1"
+sha2 = "~0.8"
 
 [badges]
 travis-ci = { repository = "unofficial-ckb/uckb-spec" }
