chore(version): release 0.1.1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uckb-spec"
-version = "0.1.1-alpha.0"
+version = "0.1.1"
 authors = ["Boyu Yang <yangby@cryptape.com>"]
 edition = "2018"
 description = "[Unofficial] CKB chain specification."
